--- a/App.Web/Views/SummerySubmission/Index.cshtml
+++ b/App.Web/Views/SummerySubmission/Index.cshtml
@@ -353,7 +353,7 @@
             /*data grid initializer*/
             DataTableBinder($("#gridTable")   //table object
                 , '@Url.Content("~/SummerySubmission/DataGrid")'  //json data url
-                , [10,50, 100, 200, 1000]  //record size
+                , [100, 200, 1000]  //record size
                 , true //show all with row size
             , addPost  //additional parameters at query string
             , btns   //buttons are at these columns
