--- a/App.Web/Content/css/brac/bootstrap-legacy.css
+++ b/App.Web/Content/css/brac/bootstrap-legacy.css
@@ -58,9 +58,10 @@
         }
 
 .modal-header {
-    padding: 9px 15px;
+    padding: 9px 20px;
     border-bottom: 1px solid #eee;
     display: block;
+    background-color: #D5E300;
 }
 
     .modal-header .close {
@@ -70,6 +71,7 @@
         margin: 0;
         line-height: 30px;
         font-size: 18px;
+        color:white;
     }
 
 .modal-body {
@@ -124,7 +126,7 @@
     }
 
 .modal-body .table-striped tbody tr:nth-child(odd) td, .table-striped tbody tr:nth-child(odd) th {
-    background-color: #f9f9f9;
+    background-color: #FFF;
 }
 
 .tooltip {
