--- a/App.Web/Content/css/brac/homepage.css
+++ b/App.Web/Content/css/brac/homepage.css
@@ -50,7 +50,7 @@ body {
 }
 
 .signIn-btn {
-    border: 1px solid #D10D74;
+    width:250px;
     border-radius: 23px;
     text-decoration: none;
     display: -webkit-box;
@@ -372,5 +372,82 @@ body {
         }
 }
 
+.dropdown-toggle {
+    position: relative;
+    cursor: pointer;
+}
 
+    .dropdown-toggle.in::after {
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
+
+    .dropdown-toggle::after {
+        bottom: 8px;
+        right: -15px;
+        color: #D10D74;
+        -webkit-transition: -webkit-transform 0.3s ease-in-out;
+        margin-left: 0.255em;
+        vertical-align: 0.255em;
+        content: "";
+        border-top: 0.3em solid;
+        border-right: 0.3em solid transparent;
+        border-bottom: 0;
+        border-left: 0.3em solid transparent;
+    }
+
+
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    right: 20px;
+    z-index: 1000;
+    display: none;
+    border: 1px solid #eee;
+    float: left;
+    min-width: 10rem;
+    padding: 0.5rem 0;
+    margin: 0.125rem 0 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 0.25rem;
+    margin: 0;
+    padding-top: 15px;
+    background-color: #fff;
+    border: none;
+    -webkit-box-shadow: 0px 6px 15px #0000000F;
+    box-shadow: 0px 6px 15px #0000000F;
+    border-radius: 10px;
+}
+
+    .dropdown-menu.in {
+        display: block !important;
+    }
+.dropdown-menu span{
+    font-weight:500;
+
+}
+
+.dropdown-item {
+    line-height: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding-left: 20px;
+    text-decoration: none;
+    line-height: 40px;
+}
+
+.fw-dropdown-menu {
+    min-width: auto;
+    width: calc(100% + 15px);
+}
 /*# sourceMappingURL=bundle.css.map*/
