--- a/App.Web/Content/css/brac/site.css
+++ b/App.Web/Content/css/brac/site.css
@@ -173,15 +173,54 @@ a.report-item:hover {
     .table-responsive {
         overflow-x: auto;
     }
+
+    .mobile-drawer {
+        display: block;
+        right: -27px;
+        top: 17px;
+        width: 25px;
+        height: 30px;
+    }
+
+    .sidebar {
+        width: 250px;
+    }
+
+        .sidebar.in {
+            width: 60px;
+        }
+
+            .sidebar.in .sidebar-item span:last-child {
+                display: none;
+            }
+
+            .sidebar.in .mobile-drawer img {
+                -webkit-transform: rotate(180deg);
+                transform: rotate(180deg);
+            }
+
+    .page-content {
+        width: calc(100% - 250px);
+    }
+
+    .sidebar.in ~ .page-content {
+        width: calc(100%);
+    }
+
+        .sidebar.in ~ .page-content #gridTable {
+            width: 100% !important;
+        }
 }
 
 @media (max-width: 576px) {
     .box-shadow {
         min-height: 350px !important;
     }
-    .hidden-phone{
-        display:none;
+
+    .hidden-phone {
+        display: none;
     }
+
     .overview-box-wrapper.box-shadow.position-relative .view-in-deatils {
         position: absolute;
         bottom: 10px;
@@ -193,6 +232,7 @@ a.report-item:hover {
     .filter-item {
         max-width: 100% !important;
     }
+
     .user-dd .datatree-menu .dropdown-item {
         padding-left: 5px;
     }
@@ -345,6 +385,11 @@ a.report-item:hover {
         background-color: #D10D74;
     }
 
+.btn-bracify:hover {
+    color: white !important;
+    background-color: #D10D74;
+}
+
 .custom-add {
     position: relative;
 }
@@ -454,4 +499,52 @@ ul.dropdown-menu {
 
 .table-responsive {
     display: initial;
+}
+
+.hr {
+    border: 2px solid #D10D74;
+    margin: 0px;
+}
+
+div.dataTables_processing {
+    z-index: 1000;
+    background-color: #222;
+    color: white;
+    width: 100% !important;
+    height: 200vh !important;
+    top: 0 !important;
+    left: 0 !important;
+    margin: 0 !important;
+    opacity: .7;
+}
+
+/*div.dataTables_processing {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
+    margin-left: 0;
+    margin-top: 0;
+    text-align: center;
+    padding: 1em 0;
+    width: 100%;
+    height: 100vh;
+    opacity: 0.7;
+}*/
+
+.dataTables_processing p {
+    padding-top: 25px !important;
+    position: absolute;
+    /* margin-left: 50%; */
+    left: 40%;
+    top: calc(50vh);
+    width: 300px;
+    height: 70px;
+    background-color: #D10D74;
+    border-radius: 20px;
+    opacity: 1;
+}
+
+.font-color-white {
+    color: white;
 }
