--- a/App.Web/Views/BepSubmission/Index.cshtml
+++ b/App.Web/Views/BepSubmission/Index.cshtml
@@ -252,7 +252,7 @@
             /*data grid initializer*/
             DataTableBinder($("#gridTable")   //table object
                 , '@Url.Content("~/BepSubmission/DataGrid")'  //json data url
-                , [50, 100, 200, 1000] //record size
+                , [100, 200, 1000] //record size
                 , true //show all with row size
             , addPost  //additional parameters at query string
             , btns   //buttons are at these columns
